--- a/css/style.css
+++ b/css/style.css
@@ -410,7 +410,7 @@ html, body {
 .popular-produce h2 {
   font-size: 36px;
   margin-bottom: 1.5rem;
-  font-family: 'Frank Ruhl Libre', serif;
+  font-family: 'Arimo', serif;
   text-transform: uppercase;
   font-weight: 500;
 }
